Cleanup list creation