@@ -1,6 +1,5 @@
 package org.folio.fqm.migration;
 
-import java.util.Collections;
 import java.util.List;
 import org.folio.fqm.migration.strategies.V0POCMigration;
 import org.folio.fqm.migration.strategies.V1ModeOfIssuanceConsolidation;
@@ -10,8 +9,9 @@ import org.springframework.stereotype.Component;
 public class MigrationStrategyRepository {
 
   // prevent re-initialization on each call
-  private static final List<MigrationStrategy> MIGRATION_STRATEGIES = Collections.unmodifiableList(
-    List.of(new V0POCMigration(), new V1ModeOfIssuanceConsolidation())
+  private static final List<MigrationStrategy> MIGRATION_STRATEGIES = List.of(
+    new V0POCMigration(),
+    new V1ModeOfIssuanceConsolidation()
   );
 
   public List<MigrationStrategy> getMigrationStrategies() {
